<resources>

    //Login
    <string name="app_name">appGYM</string>
    <string name="user_name">Correo Electronico</string>
    <string name="pasword">Contraseña</string>
    <string name="bt_login">Iniciar Sesion</string>
    <string name="formulario">Nuevo Miembro </string>
    <string name="registro">Registrar usuario</string>
    <string name="aqui">Click aquí</string>
    <string name="logo">Logo tipo de applicacion</string>
    <string name="enviar"> Enviar</string>

    //formulario
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Celular</string>
    <string name="correo">Correo Electronico</string>
    <string name="bt_formulario">Registra Miembro</string>

    <!-- perfil -->
    <string name="membresia_label">Membresia:</string>
    <string name="membresia_activa">ACTIVA</string>
    <string name="cerrar_sesion">cerrar sesion</string>
    <string name="editar">Editar</string>
    <string name="miembro_label">Miembro:</string>
    <string name="correo_label">Correo:</string>
    <string name="fecha_nacimiento_label">Fecha nacimiento:</string>
    <string name="contacto_label">Contato:</string>
    <string name="bt_cambiar_pass">Cambiar contraseña</string>
    <string name="numero_membresia_label">Numero de  membresia:</string>
    <string name="resumen_actividad_label">Resumen de actividad</string>
    <string name="actividad_header">Actividad:</string>
    <string name="act_box">1.- clase de box</string>
    <string name="act_spinning">2.- Sppinig</string>
    <string name="act_yoga">3.- yoga</string>
    <string name="act_crossfit">4.- crosfit</string>
    <string name="act_pesas">5.- Pesas</string>
    <string name="act_cardio">6.- Cardio</string>
    <string name="clases_racha_label">Clases en Racha</string>

    <string name="nombre_ejemplo">Samuel Garcia Quistian</string>
    <string name="correo_ejemplo">samusgar@gmail.com</string>
    <string name="fecha_ejemplo">20/09/2001</string>
    <string name="contacto_ejemplo">2206153338</string>
    <string name="numero_membresia_ejemplo">0117</string>
    <string name="clases_racha_ejemplo">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>