<?xml version="1.0" encoding="utf-8"?>
<!-- CAMBIOS DE INTERFAZ CHIDO: ajuste visual de fondo. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:orientation="vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                />
        </RelativeLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:textColorHint="@color/color_login"
                    app:boxStrokeColor="@color/color_login"
                    >
                    <EditText
                        android:id="@+id/user_login"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="italic"
                        android:textColor="@color/accent_gold"
                        android:text="prueba@demo.com"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/pasword"
                    app:boxStrokeColor="@color/color_login"
                    android:textColorHint="@color/color_login">
                    <EditText
                        android:id="@+id/pass_login"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="italic"
                        android:textColor="@color/accent_gold"
                        android:text="ExoFit2026!"/>


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="30dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/bt_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_login"
                android:backgroundTint="@color/color_login"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="30dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <View
                android:layout_width="40dp"
                android:layout_height="0dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recuperar contraseña"
               android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/accent_red"/>
            <View
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/bt_recuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aqui"
                android:backgroundTint="@color/color_login"/>



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>